# rogue-day

./: .gitignore  FRONTEND_RESTORATION.md  GEMINI.md  LOCAL_DEV.md  README.md  code_review.md  code_review_2.md  code_review_templates.md  old_AddTaskModal.tsx  old_RunPage.tsx  old_TaskList.tsx  project_overview.md  start-dev.bat  Игровой планировщик для СДВГ_ исследование.txt
.agent/rules/: haus.md
.cursor/rules/: haus.mdc
app/: index.html  package-lock.json  package.json
app/src/: App.tsx  index.css
app/src/components/: ErrorBoundary.tsx
app/src/components/journal/: JournalDayCard.tsx  JournalEntryModal.tsx
app/src/components/layout/: AppLayout.tsx  BottomTabBar.tsx  index.ts
app/src/hooks/: useSync.ts  useTelegram.ts  useTimer.ts
app/src/lib/: api-types.generated.ts  api.ts  constants.ts  icons.tsx  utils.ts
app/src/pages/: JournalPage.tsx  ProfilePage.tsx  RunPage.tsx  TemplatesPage.tsx
app/src/store/: types.ts  useRunStore.ts  useServerRunStore.ts  useUserStore.ts
backend/: .env.example  README.md  alembic.ini  debug_db.py  ensure_tables.py  pyproject.toml  railway.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_extraction_snapshot_fields.py
backend/app/: config.py  database.py  main.py  models.py  schemas.py
backend/app/api/: dependencies.py  router.py
backend/app/api/endpoints/: auth.py  avatar.py  presets.py  runs.py  tasks.py  templates.py  users.py
backend/app/core/: __init__.py  game_config.py
backend/app/services/: run_service.py  task_service.py
backend/scripts/: create_dev_user.py
(+12 files in other folders)
